--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,27 @@
   }
 }
 
+@keyframes bounceUp {
+  0% {
+    transform: translateY(500px);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(-20px);
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.bounce-up {
+  animation: bounceUp 1s ease forwards;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
